apps/prod/rbx-portal/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-portal
spec:
  redirectScheme:
    scheme: https
    permanent: true
