apps/prod/rbx-portal/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-portal
  namespace: rbx-portal
  labels:
    app.kubernetes.io/name: rbx-portal
    app.kubernetes.io/part-of: rbx-portal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rbx-portal
  ports:
    - port: 80
      targetPort: 8080
      name: http
